--- a/estilosR.css
+++ b/estilosR.css
@@ -1,6 +1,6 @@
 h1{
     text-align: center;
-    color:black;
+    color:white;
     font-family: "Gill Sans", 'Gill Sans MT',
     calibri, 'Trebuchet MS',sans sans-serif;
 }
@@ -15,7 +15,7 @@ ul {
     li{ float:left;}
     li a{
         display: block;
-        color:white;
+        color:black;
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
@@ -24,19 +24,20 @@ ul {
         background-color:gray;}
     
         body{
-            background-color:black;
+            background-color:white;
             margin: 0;
-            color: white;
+            color:black;
            
         }
         .cabeza{
             height: 100px;
-            background-color:white;
+            background-color:black;
         }
       
         .piedepagina{
             height: 100px;
-            background-color:dimgray;
+            background-color:black;
+            border-color:black;
         }
         img{
             float:left;
@@ -50,12 +51,18 @@ ul {
         }
         h2{
             text-align: center;
+            color:white;
+        }
+        footer h2{
+            color:black;
         }
         div ul{
             text-align: left;
         }
       .container{
-        color: white;
+        color:white;
+        background-color:black;
+        
       }
       div li{
         color:chartreuse;
