--- a/estilosN.css
+++ b/estilosN.css
@@ -46,7 +46,7 @@ ul {
         }
         h2{
             text-align: center;
-            color: white;
+            color: black;
         }
         p{
             text-align: center;
